# microblog

./: .envrc  .gitignore  .gitmodules  Dockerfile  Procfile  README.md  Taskfile.yaml  compose.yaml  mypy.ini  pyproject.toml
backend/: asgi.py  common.py  settings.py  urls.py  wsgi.py
backend/admin/: __init__.py  blog_posts.py  users.py
backend/management/commands/: create_admin.py  seed.py
backend/managers/: users.py
backend/migrations/: 0001_initial.py  0002_user_avatar.py
backend/models/: __init__.py  blog_post.py  blog_posts.py  user.py  users.py
backend/permissions/: user_is_author.py
backend/routers/: 0002_seed_data.py  __init__.py  blog_post.py  blog_posts.py  users.py
backend/routers/tests/: test_blog_post.py  test_users.py
backend/schema/: __init__.py  blog_post.py  users.py
frontend/: Dockerfile  Procfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/common/: Breadcrumbs.tsx  CatalystCard.tsx
frontend/src/common/Theme/: ChangeThemeDropdown.tsx  ThemeContext.tsx  ThemeProvider.stories.tsx  ThemeProvider.tsx  ToggleDarkMode.tsx  index.ts
frontend/src/common/api/: api_client.ts  blog_posts.ts  users.ts
frontend/src/common/auth/: AuthContext.tsx  ProtectedRouteHOC.tsx
frontend/src/common/contexts/: MicroblogProviderStack.tsx
frontend/src/common/header/: MicroBlogHeader.tsx
frontend/src/common/hooks/: useLocalStorageState.ts
tasks/: db.Taskfile.yaml
(+62 files in other folders)
